--- a/base-knowledge/pom.xml
+++ b/base-knowledge/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.gzy.java</groupId>
-    <artifactId>concurrency</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>base-knowledge</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <java.version>1.8</java.version>
         <spring.boot.version>1.5.16.RELEASE</spring.boot.version>
@@ -20,24 +19,6 @@
         <maven.complier.plugin.version>3.8.1</maven.complier.plugin.version>
         <spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
     </properties>
-
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <version>2.1.4.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -51,6 +32,5 @@
         </plugins>
 
     </build>
-
 
 </project>
